--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "dvc[s3]>=3.65.0",
+    "hydra-core>=1.3.2",
     "pre-commit>=4.5.1",
     "ruff>=0.14.10",
 ]
