--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "dvc[s3]>=3.65.0",
     "hydra-core>=1.3.2",
     "pre-commit>=4.5.1",
+    "pytorch-lightning>=2.6.0",
     "ruff>=0.14.10",
 ]
 
