--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.10"
 dependencies = [
     "dvc[s3]>=3.65.0",
     "hydra-core>=1.3.2",
+    "mlflow>=3.8.1",
     "pre-commit>=4.5.1",
     "pytorch-lightning>=2.6.0",
     "ruff>=0.14.10",
