--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -1,5 +1,11 @@
 defaults:
+  - _self_
   - data: default
-  - model: baseline
+  - augment: default
+  - model: resnet18
   - train: default
   - logging: mlflow
+
+hydra:
+  job:
+    chdir: false
